Oracle connection in progress

--- a/settings.cfg
+++ b/settings.cfg
@@ -2,7 +2,7 @@
     "db_conn_acct": "oracledev",
     "db_conn_pass": "gAAAAABgwTwqPmFH-sOKbvyVHnYkpAEHi8PzMi7yog0EVKRElX-_S0L9GTWurSDuDHrNo9_DfnDUT9AjmCCcIFwBUUk-rfXZ3g==",
     "db_conn_host": "localhost",
-    "db_conn_database": "oracledev",
+    "db_conn_service": "ORCLCDB",
     "db_conn_type": "oracle",
     "email": "someone@nowhere.com",
     "logfilesize": [
