Still working on ODBC DSN

--- a/settings_odbc.cfg
+++ b/settings_odbc.cfg
@@ -1,5 +1,5 @@
 {
-    "db_conn_service": "DTOracle",
+    "db_conn_service": "DSN=DTOracle",
     "db_conn_type": "oracle+cx_oracle",
     "email": "someone@nowhere.com",
     "logfilesize": [
