Updated ODBC version to use TNS name

--- a/settings_odbc.cfg
+++ b/settings_odbc.cfg
@@ -1,5 +1,7 @@
 {
-    "db_conn_service": "DSN=DTOracle",
+    "db_conn_acct": "oracleaccount",
+    "db_conn_pass": "RUN TO GET THIS: python encryptpass.py encrypt [key] [pass]",
+    "db_conn_service": "ORACLE_TNS",
     "db_conn_type": "oracle+cx_oracle",
     "email": "someone@nowhere.com",
     "logfilesize": [
